Add question history detail page
